# applock

./: Makefile  Makefile.am  POTFILES.in  README  applock_cp_plugin.c  applock_daemon.c  applock_daemon_fix.c  applock_desktopfiles_editor.c  applock_shared.c  applock_shared.h
